fixed grid alignment issues

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -157,10 +157,16 @@ section.second{
 	align-items: flex-start;
 	padding-bottom: 20px;
 }
+
+.info-chart h6{
+	padding-top: 10px;
+	min-height:40px;
+}
 .chart-container{
 	width:100%;
+	/*height:100%;*/
 	border:2px solid white;
-	min-height:250px;
+	height:250px;
 	box-sizing: border-box;
 }
 
@@ -201,7 +207,6 @@ section.second{
   	background-repeat: no-repeat;
   	background-position: left; 
 	 background-size:auto  100% ;
-
     width:100%;
     height:100%;
   }
@@ -229,6 +234,7 @@ section.second{
    	flex-direction: column;
    	justify-content: center;
    	align-items: center;
+   	min-height: 250px;
    }
 
   #assignment-beat img{
@@ -243,9 +249,13 @@ section.second{
    	align-items: center;
    }
 
-  #locations img{
+  .location-image{
   	width:100%;
-  	height:auto;
+  	height:100%;
+  	/*background-size: cover;*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:auto  100% ;
   }
 
 
